--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -15,6 +15,8 @@ sites:
     url: https://pagos.antel.com.uy/epagos-w2w-comercio-web/jsf/error.xhtml
   - name: Ubersuggest
     url: https://app.neilpatel.com/en/login
+  - name: Stress
+    url: https://stress-test.tiendainglesa.com.uy/
 
 
 status-website:
